docs(audit/features): enrich 34 manifests to in_progress + fix 4 typo'd slugs
Brings 34 stub manifests to in_progress status with real audit content:
descriptions, hpp_anchors with file:line ranges, curated depends_on/related,
and severity-tagged known_bugs pinned to specific source lines. Covers most
collection_*, compressed_*, decode_*, field_*, and the
adapter_recovery_c2i / find_methods_by_signature features.

Fixes:
- field_string: array_decode_backing_data -> array_element_helpers,
  decode_oop_pointer -> decode_oop_and_pointers
- find_class_context_loader: jni_local_ref_semantics -> jni_local_ref_hygiene,
  find_class_graph_walk -> for_each_loaded_class

audit/graph/ regenerated via `python audit/features/generate.py vault`.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>